<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="current_score">Your score is</string>
    <string name="best_score">Your best score is</string>
    <string name="defaultscore" translatable="false">42</string>
    <string name="medaille">Medaille</string>
    <string name="play_button">Start to play</string>
    <string name="about_button">about</string>
    <string name="about_back_button">back</string>
    <string name="revive_button">Revive for</string>
    <string name="revive_notice">Points won\'t be uploaded to the leaderboard</string>
    <string name="coins">coins</string>
    <string name="medaille_image" translatable="false">Medaillenimage</string>
    <string name="mute_button">Mutes the sound</string>
    <string name="developer">Developer: Lars Harmsen</string>
    <string name="graphics">Graphics: Lars Harmsen</string>
    <string name="consulting">Consulting: repat</string>
    <string name="license">License: MIT</string>
    <string name="nyan_cat">Nyan Cat was drawn by Christopher Torres and もももも remixed the music by daniwell</string>
    <string name="source_code">Get the source code here:\nhttps://github.com/cubei/FlappyCow</string>
    <string name="onscreen_score_text">Score:</string>
    <string name="onscreen_coin_text">Coins:</string>
    <string name="on_back_press">Press backbutton again to exit</string>
    <string name="toast_achievement_50_coins">Achievement unlocked: 50 coins</string>
    <string name="toast_achievement_toastification">Achievement unlocked: Toastification</string>
    <string name="toast_achievement_bronze">Achievement unlocked: Bronze</string>
    <string name="toast_achievement_silver">Achievement unlocked: Silver</string>
    <string name="toast_achievement_gold">Achievement unlocked: Gold</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_wrong">账户名有误</string>
    <string name="password_wrong">密码有误</string>
    <string name="get_data_faile">数据获取失败</string>
    <string name="players3_get_data_faile">players3数据获取失败</string>
    <string name="get_data_faile1">数据获取失败1</string>
    <string name="get_data_faile2">数据获取失败2</string>
    <string name="plase_login">请登录</string>
    <string name="regiest_success">注册成功</string>
    <string name="regoset_faile">注册失败</string>
    <string name="account_have_already">账户名已存在</string>
    <string name="data_upload_success">数据上传成功</string>
    <string name="data_upload_faile">数据上传失败</string>
    <string name="game_name">Catch The Rubbish!</string>
    <string name="worker_name">Neil and Kyle</string>
    <string name="startBtn">Start</string>
    <string name="scoreTag">Score: </string>
    <string name="score">0</string>
    <string name="YouScore">Your score is: </string>
    <string name="showList">Show No.</string>
    <string name="top">Top 5 Score</string>
    <string name="restart">Restart</string>
    <string name="title1">Kiwi Bird</string>
    <string name="title2">Hitting</string>
    <string name="title3">Rank</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="description1">Fling the kiwi bird to make it fly, you only have 3 kiwi birds, do not waste them</string>
    <string name="description2">Hitting the kiwi fruit to get 3 points, hitting the box slowly make it broken and get 1 points, fling very fast the destroy the box directly get 1 points</string>
    <string name="description3">The top 5 rank will be recorded in the list</string>
    <string name="app_name">WhatRubbish</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="record_your_message">Record your message</string>
    <string name="message_recorded">Message recorded</string>
    <string name="review_message">Review message</string>
    <string name="recording">Recording</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="storage_is_full">Storage is full</string>
    <string name="max_length_reached">Maximum length reached</string>
    <string name="insert_sd_card" product="default">Insert an SD card</string>
    <string name="min_available"><xliff:g id="minutes">%d</xliff:g> min available</string>
    <string name="sec_available"><xliff:g id="seconds">%d</xliff:g>s available</string>
    <string name="accept">Done</string>
    <string name="discard">Discard</string>
    <string name="button_ok">OK</string>
    <string name="timer_format" translatable="false"><xliff:g id="format">%02d:%02d</xliff:g></string>
    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
    <string name="audio_db_playlist_name">My recordings</string>
    <string name="error_sdcard_access" >Can\'t access SD card.</string>
    <string name="error_app_internal">Internal application error.</string>
    <string name="error_mediadb_new_record">Couldn\'t save recorded audio.</string>
    <string name="title">欢迎使用垃圾识别</string>
    <string name="button">Start</string>
    <string name="camera_error">你的设备不支持</string>
    <string name="picture">拍摄</string>
    <string name="loading">正在加载</string>
    <string name="pic_showup_desc">展示</string>
    <string name="et_account_hint">账号</string>
    <string name="et_password_hint">密码</string>
    <string name="register">新用户</string>
    <string name="login">登入</string>
    <string name="forget_password">忘记密码?</string>
    <string name="tv_country">中国+86</string>
    <string name="et_phoneNumber_hint">请输入你的手机号码</string>
    <string name="title_phoneNumber">请填写手机号码</string>
    <string name="btn_next">下一步</string>
    <string name="tv_xieyi">我已阅读并同意</string>
    <string name="tv_xieyi_url">使用条款和隐私政策</string>
    <string name="tv_tips_password">密码由6-16位数字,字母或符号组成,不能是9位一下纯数字组成</string>
    <string name="tv_tips_name">建议填写你的真实姓名,让你的朋友更容易人出你,此昵称以后可以随时修改</string>
    <string name="et_name_hint">昵称</string>
    <string name="register_complete">完成</string>
    <string name="title_register_info">设置密码和昵称</string>
    <string name="tv_qq">你已获得QQ号码</string>
    <string name="tv_qq_number">525203053</string>
    <string name="tv_register_result">启用通讯录查找更多好友,直接发起QQ聊天,我已阅读并同意</string>
    <string name="tv_tiaokuan">服务声明</string>
    <string name="tv_register_success">注册成功</string>
    <string name="register_success">进入QQ</string>
    <string name="tv_search">搜索</string>
    <string name="news">消息</string>
    <string name="user_name">开心一刻</string>
    <string name="user_feel">好好学习,天天向上</string>
    <string name="user_time">12:30</string>
    <string name="tv_loading">正加载,请稍后...</string>
    <string name="no_data">网络异常...</string>
    <string name="pop_chat">多人聊天</string>
    <string name="pop_sangzhao">分享</string>
    <string name="pop_camera">水印相机</string>
    <string name="pop_scan">扫一扫</string>
    <string name="app_cancle">取消</string>
    <string name="app_change_user">注销用户</string>
    <string name="app_exit_user">退出</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <string name="sd_pic">相册</string>
    <string name="sacn_dialog_title">是否打开链接?</string>
    <string name="scan_url">http://www.baidu.com</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="camera_water">水印相机</string>
    <string name="camera_more">更多</string>
    <string name="camera_day">2014-04-14</string>
    <string name="camera_hour">21:01</string>
    <string name="camera_day_hour">2014-04-14 21:01</string>
    <string name="camera_address">珠海</string>
    <string name="camera_tep">23℃多云</string>
    <string name="camera_pm">PM2.5 32</string>
    <string name="camera_txt">静静的享受独自一个人的午后</string>
    <string name="camera_ni">虫虫</string>
    <string name="tiaozheng">旋转</string>
    <string name="control">管理</string>
    <string name="group">分组</string>
    <string name="all">全部</string>
    <string name="cnews">消息</string>
    <string name="call">通话</string>
    <string name="tv_phone">通讯录</string>
    <string name="tv_group">群组</string>
    <string name="tv_discuss">讨论组</string>
    <string name="tv_life">生活服务</string>
    <string name="friend_group">好友分组</string>
    <string name="device">我的设备</string>
    <string name="group_count">1/2</string>
    <string name="child_feel">[在线]好好学习天天向上</string>
    <string name="tv_call1">你通话过的联系人都会在这里出现</string>
    <string name="tv_call2">快和朋友开始语音通话吧</string>
    <string name="btn_call">找人聊聊</string>
    <string name="recentchat">最近聊天</string>
    <string name="choose_constact">选择联系人</string>
    <string name="search">请输入关键字</string>
    <string name="dynamic">动态</string>
    <string name="mime">我</string>
    <string name="tv_newfriend">新朋友</string>
    <string name="tv_tongxunlu">通讯录</string>
    <string name="tv_friend">QQ好友</string>
    <string name="wifi_state">WLAN 状态</string>
    <string name="instruction_pre">启动服务，可以从电脑远程管理手机文件</string>
    <string name="instruction">请在"我的电脑"地址栏输入:</string>
    <string name="notif_server_starting">远程管理已开启</string>
    <string name="notif_title">远程管理</string>
    <string name="no_wifi_hint">没有WLAN网络，请检查WLAN设置</string>
    <string name="start_server">开启服务</string>
    <string name="stop_server">停止服务</string>
    <string name="no_wifi">没有WLAN网络</string>
    <string name="storage_warning">没有外部存储设备或SD卡不可用</string>
    <string name="wifi">文件管理</string>
</resources>