<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/gameBackground"
    tools:context=".SecondFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/arrow"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        app:lottie_scale="10"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/hit_icon" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/title2"/>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="10dp"
        android:fontFamily="@font/gotham_medium"
        android:textColor="@color/black"
        android:layout_marginHorizontal="8dp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/description2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideTwoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/textColor"
            android:layout_gravity="bottom|start"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/gotham_bold"/>

        <TextView
            android:id="@+id/slideTwoNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/next"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>